--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
         "single"
       ]
     }
-  }
+  },
+  "scripts": { "deploy": "ng build -sm -ec -bh wheeloflife & ngh --silent=false" }
 }
