--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ bower_components
 test/bower_components
 .idea/workspace.xml
 .idea/vcs.xml
+.idea
+docs
+npm-debug.log.2855348628
+wheeloflife.sublime-project
+wheeloflife.sublime-workspace
+WHEELOFLIFE_recovered.rp
