--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^14.4.0",
     "del": "^2.2.0",
     "dom-to-image": "^2.5.2",
+    "gh-pages": "^1.1.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-babel": "^6.1.1",
@@ -51,5 +52,6 @@
         "single"
       ]
     }
-  }
+  },
+  "scripts": {"publish": "gh-pages -d dist"}
 }
