--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "element-ui": "^2.4.5",
     "vue": "^2.5.21",
+    "vue-i18n": "^8.7.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
