--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "proxy": "http://localhost:8081"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
     "element-ui": "^2.4.5",
     "vue": "^2.5.21",
     "vue-color": "^2.7.0",
