--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
+    "dom-to-image": "^2.6.0",
     "element-ui": "^2.4.5",
     "vue": "^2.5.21",
     "vue-color": "^2.7.0",
