--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-service": "^3.3.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "babel-plugin-component": "^1.1.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.0.3",
     "ts-jest": "^23.0.0",
